trunk/Archive2/0d/e8734818e8f9da/output
main.cpp:9:14: error: explicit instantiation of undefined function template 'increment_B'
template int increment_B(int); // Error: no definition available
             ^
main.cpp:4:3: note: explicit instantiation refers here
T increment_B(T t);
  ^
1 error generated.
